# MPathTracer

./: .gitignore  CMakeLists.txt  README.md
PathTracer/: CMakeLists.txt  CUDABuffer.h  DevicePrograms.cu  LaunchParams.h  Material.h  Model.cpp  Model.h  PathTracer.cpp  Renderer.cpp  Renderer.h
common/gdt/cmake/: configure_optix.cmake
